# opengl-nolib-demo

./: .gitignore  CMakeLists.txt  README  README.md  win32_build.bat
include/: glcorearb.h  glext.h  glxext.h  render.h  wglext.h
src/: win32_main.cpp
